# zolldo

./: .gitignore  README.md  pyproject.toml  zolldo.py
src/zolldo/: zolldo.py
